# eu-digital-product-passport

./: 404.html  README.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yml
.specify/memory/: constitution.md
.specify/specs/: 37-haskell-types.md  38-test-vectors.md  39-aiken-validators.md  41-mpt-operations.md  42-cose-verification.md
access/: index.html
cardano/access-control/: index.html
cardano/costs/: index.html
cardano/eu-integration/: index.html
cardano/existing-work/: index.html
cardano/identity/: index.html
cardano/overview/: index.html
cardano/scalability/: index.html
cardano/signed-readings/: index.html
cardano/storage/: index.html
data-model/: index.html
docs/: access.md  data-model.md  index.md  links.md  pilots.md  references.md  regulation.md  timeline.md
docs/assets/: battery-presentation.html
docs/cardano/: access-control.md  costs.md  eu-integration.md  existing-work.md  identity.md  incentives.md  lifecycle.md  nfc-hardware.md  overview.md  ownership.md  payload-standard.md  scalability.md  signed-bms.md  signed-readings.md  state.md  storage.md
docs/examples/: battery-pass-carbon-footprint.json  battery-pass.md  untp-battery.md  untp-dpp-ev-battery.json
docs/javascripts/: mermaid-dark.mjs
docs/schemas/: battery-pass.md  untp-dpp.md
examples/: battery-pass-general-product-info.json
haskell/: LICENSE  cabal.project  dpp.cabal  flake.nix  justfile
haskell/app/: Main.hs
haskell/lib/Dpp/: Types.hs
haskell/nix/: project.nix
haskell/test/: Main.hs
lean/: DppProofs.lean  lake-manifest.json  lakefile.toml
links/: index.html
pilots/: index.html
references/: index.html
regulation/: index.html
search/: search_index.json
timeline/: index.html
(+33 files in other folders)
